# kollectra-suite

./: .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  forge.config.js  forge.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.main.config.js  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.js
.forgejo/issue_template/: Feature-Request.yaml
src/: index.css  index.html  kollectra.css  main.ts  preload.ts  renderer.ts
src/types/: interfaces.d.ts
