[project]
name = "kollectra-suite"
version = "0.1.0"
description = ""
authors = [
    {name = "ofthemasses",email = "<finlaymetcalfe@hotmail.com>"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

